<resources>
    <string name="app_name">Hw1_calculator</string>
    <string name="click_me">Click me!</string>
    <string name="copy">COPY</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="C">C</string>
    <string name="del">del</string>
    <string name="main_text">0</string>
    <string name="left_br">(</string>
    <string name="right_br">)</string>
    <string name="dot">DOT</string>
</resources>